Sugati/src/objects/Questinnaire__c.object
<CustomObject>
    <description>Client and HS Questionnaire</description>
    <fields>
        <fullName>Defect_on_Questionnaire__c</fullName>
        <formula>IF(StatusNA__c = &apos;Red&apos;,&quot;YES&quot;,&quot;NO&quot;)</formula>
        <label>Defect on Questionnaire?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Audit_By__c</fullName>
        <label>Audit By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q_Category_Checker__c</fullName>
        <label>Category Checker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q_Date_of_visit__c</fullName>
        <description>This is for HS Questionnaire</description>
        <label>Date of visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q_Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionnaireName__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id, Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusNA__c</fullName>
        <label>StatusNA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(StatusNA__c  = &apos;Red&apos;, IMAGE(&quot;/resource/RedColor&quot;, &quot;Red&quot;), IMAGE(&quot;/resource/GreenColor&quot;, &quot;Green&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000000000}</displayFormat>
        <label>Questinnaire ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>Client Questionnaire</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>H_S</fullName>
        <active>true</active>
        <description>Health and Safety</description>
        <label>H&amp;S</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>